--- a/back/package.json
+++ b/back/package.json
@@ -11,10 +11,12 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/jest": "^24.0.18",
 		"chalk": "^2.4.2",
 		"eslint": "^6.2.2",
 		"jest": "^24.9.0",
-		"nodemon": "^1.19.1"
+		"nodemon": "^1.19.1",
+		"supertest": "^4.0.2"
 	},
 	"dependencies": {
 		"mongoose": "^5.6.11",
