--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"dependencies": {
 		"@types/jest": "^24.0.18",
-		"jest": "^24.9.0"
+		"jest": "^24.9.0",
+		"mongoose-timestamp": "^0.6.0"
 	},
 	"devDependencies": {},
 	"scripts": {
