--- a/back/package.json
+++ b/back/package.json
@@ -22,9 +22,12 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
     "restify": "^8.4.0",
-    "restify-errors": "^8.0.1"
+    "restify-errors": "^8.0.1",
+    "restify-jwt-community": "^1.1.0"
   },
   "jest": {
     "collectCoverageFrom": [
