fix: add mongoose-timestamp as dependencie
Loaded but not installed

--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
+    "mongoose-timestamp": "^0.6.0",
     "restify": "^8.4.0",
     "restify-errors": "^8.0.1",
     "restify-jwt-community": "^1.1.0"
