--- a/back/package.json
+++ b/back/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.11",
     "mongoose-timestamp": "^0.6.0",
