--- a/front/package.json
+++ b/front/package.json
@@ -29,7 +29,10 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.2.2",
+    "@types/jest": "^24.0.18",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.3.0",
     "eslint-plugin-react": "^7.14.3"
   }
 }
