--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
     "jsonwebtoken": "^8.5.1",
